data/diff_tests/wasmtime/br_table_IncorrectHandlingofControlFlowAcrossModuleBoundaries_2568.wast
;; 7. **Backward Branch with Cross-Module Call:**    - Create a scenario where a `br_table` includes a backward branch to a block invoking an exported function from another module.    - **Constraint Checked:** The correct handling of backward branches and their operand stacks when affected by calls to other modules.    - **Reasoning:** Tests if `br_table` competently manages backward branching control flow and operands with cross-module interactions.

(assert_invalid
  (module
    (import "env" "external_function" (func $external_function (result i32)))
    (func $test
      (block $outer
        (loop $inner
          (br_table 0 1 (call $external_function))
        )
      )
    )
  )
  "type mismatch"
)